# ESnip

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md  build-release.ps1  bump-version.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml
src/: App.vue  browserShortcutGuard.ts  contextMenuGuard.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: bootstrap.rs  mod.rs  state.rs
src-tauri/src/app/commands/: clipboard.rs  mod.rs  notes.rs  settings.rs
src-tauri/src/app/platform/: hotkey.rs  mod.rs  tray.rs
src-tauri/src/core/: mod.rs  text.rs
src-tauri/src/store/: mod.rs  notes.rs  settings.rs
src-tauri/src/store/notes/: connection.rs  kinds.rs  migration.rs  mod.rs  repository.rs  schema.rs  search.rs  tag_index.rs  tags.rs  types.rs
src-tauri/src/tests/: README.md
src-tauri/src/tests/store/: settings.rs
src-tauri/src/tests/store/notes/: kinds.rs  repository.rs  search.rs  tags.rs  test_utils.rs
src/i18n/: en-US.ts  index.ts  types.ts  zh-CN.ts
src/notes/: noteKinds.ts
src/pages/: HomePage.scoped.css  HomePage.vue
src/pages/home/: DeleteNoteConfirm.scoped.css  DeleteNoteConfirm.vue  HomePageView.scoped.css  HomePageView.vue  HomeShellView.vue  NoteCard.scoped.css  NoteCard.vue  NoteContextMenu.scoped.css  NoteContextMenu.vue  cardColumns.ts  cardShare.ts  (+6 more)
src/settings/: appSettingsRepository.ts  hotkeys.ts  useAppSettings.ts
src/text/: cleanBracketedContent.ts
src/updates/: useAppUpdater.ts
(+9 files in other folders)
